# enterprise-certificate-offload

./: .gitignore  CMakeLists.txt  CODEOWNERS  README.md  __init__.py
.github/workflows/: linux.yml  macos.yml  test-signer-linux.yml  windows.yml
ecp-provider/: CMakeLists.txt  provider.c
sample/sample_gecc/: enterprise_cert_mac.json  enterprise_cert_windows.json  sample.py
sample/sample_localhost/: enterprise_cert_mac.json  enterprise_cert_windows.json  sample.py
scripts/: create_client_creds.sh  create_server_creds.sh  credential_names.sh  ecp_build.sh  integration_test.sh  linux.sh  linux_setup.sh  mac.sh  macos_setup.sh  openssl_build.sh  setup_signer_proxy.sh  start_mtls_https_server.sh  windows.ps1
scripts/windows/: create_client_creds.ps1  create_server_creds.ps1  ecp_build.ps1  start_mtls_https_server.ps1  windows_setup.ps1
src/: offload.cpp
testing_utils/: utils.py
testing_utils/cert/: rsa_key.pem
testing_utils/server/: server.go
tests/: integration_test.py  sample_gecc.py  sample_localhost.py  test_mtls.py  test_mtls.sh  test_mtls_py.ps1  test_mtls_py.sh  test_mtls_py_with_conf.sh  test_mtls_with_conf.sh  test_sign.sh
tests/testing_utils/: __init__.py  requirements.txt  utils.py
tests/testing_utils/cert/: ca_cert.pem  ec.pfx  ec_cert.pem  ec_key.pem  rsa.pfx  rsa_cert.pem
tests/testing_utils/server/: server.go
tests/unit/: offload_test.cpp
utils/linux/: Dockerfile
